<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_car</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="frankandyray@todo.todo">frankandyray</maintainer>
  <license>TODO: License declaration</license>


  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>pyserial</exec_depend>
   
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>builtin_interfaces</build_depend>
   
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosidl_generate_interfaces/>
  </export>
</package>
